deps/v8/test/message/for-loop-invalid-lhs.out
*%(basename)s:5: SyntaxError: Invalid left-hand side in for-loop
function f() { for ("unassignable" in {}); }
                    ^^^^^^^^^^^^^^
SyntaxError: Invalid left-hand side in for-loop

